--- a/BlazorWebAppInteractive/Frontend/Pages/Login/ResetPassword.razor
+++ b/BlazorWebAppInteractive/Frontend/Pages/Login/ResetPassword.razor
@@ -1,8 +1,9 @@
 ﻿@page "/password/reset"
 @inject IAccountService AccountService
 @inject ITokenService TokenService
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
-<MudContainer MaxWidth="MaxWidth.Small">
+<MudContainer MaxWidth="MaxWidth.Small" Style="height: 100%; display: flex; align-items: center; justify-content: center;">
     <MudText Typo="Typo.h4" Align="Align.Center" GutterBottom>Forgot Password</MudText>
     <EditForm Model="Input" method="post" OnValidSubmit="HandleResetPassword" FormName="login">
         <DataAnnotationsValidator />
@@ -21,7 +22,7 @@
                               AdornmentIcon="@PasswordInputIcon01"
                               OnAdornmentClick="PW01Vis"
                               MaxLength="100"
-                              For="() => Input.Password"/>
+                              For="() => Input.Password" />
             </MudItem>
 
             <MudItem xs="12">
