--- a/BlazorWebAppInteractive/Frontend/Pages/Login/ForgotPassword.razor
+++ b/BlazorWebAppInteractive/Frontend/Pages/Login/ForgotPassword.razor
@@ -11,12 +11,15 @@
 @using System.Security.Claims
 
 @inject IAccountService AccountService
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
 <PageTitle>Reset Password</PageTitle>
-<MudContainer MaxWidth="MaxWidth.Small">
-    <MudText Typo="Typo.h4" Align="Align.Center" GutterBottom>Forgot Password</MudText>
+<MudContainer MaxWidth="MaxWidth.Small" Style="height: 100%; display: flex; align-items: center; justify-content: center;">
     <EditForm Model="Input" method="post" OnValidSubmit="HandleResetPassword" FormName="login">
         <DataAnnotationsValidator />
+
+        <MudText Typo="Typo.h4" Align="Align.Center" GutterBottom>Forgot Password</MudText>
+
         <MudGrid Justify="Justify.Center">
             <MudItem xs="12">
                 <MudTextField T="string"
