--- a/BlazorWebAppInteractive/Frontend/Pages/Login/ResetPassword.razor
+++ b/BlazorWebAppInteractive/Frontend/Pages/Login/ResetPassword.razor
@@ -4,9 +4,9 @@
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
 <MudContainer MaxWidth="MaxWidth.Small" Style="height: 100%; display: flex; align-items: center; justify-content: center;">
-    <MudText Typo="Typo.h4" Align="Align.Center" GutterBottom>Forgot Password</MudText>
     <EditForm Model="Input" method="post" OnValidSubmit="HandleResetPassword" FormName="login">
         <DataAnnotationsValidator />
+        <MudText Typo="Typo.h4" Align="Align.Center" GutterBottom>Reset Password</MudText>
         <MudGrid Justify="Justify.Center">
             <MudItem xs="12">
                 <MudTextField T="string"
